# DeepRobotStation

./: CMakeLists.txt  README.md  README_ZH.md  main.cpp  manager_control_mode.cpp  manager_control_mode.hpp  robot_ground_station.cpp  robot_ground_station.h
android/: AndroidManifest.xml
android/res/values/: strings.xml
manager_deep/: interface_robot_deep.cpp  interface_robot_deep.hpp  widget_deeprobot.cpp  widget_deeprobot.hpp
manager_gimbal/: gimbal_control_siyi.hpp  interface_gimabal_siyi.cpp  interface_gimabal_siyi.hpp  widget_gimbal.cpp  widget_gimbal.hpp
manager_link/: interface_remote_control_siyi.cpp  interface_remote_control_siyi.hpp  remote_control_siyi.hpp  widget_link.cpp  widget_link.hpp
manager_rtsp/: widget_overlay.cpp  widget_overlay.hpp  widget_rtsp.cpp  widget_rtsp.hpp
res/: res.qrc
res/QSS/: style.qss
